# gemm_adv

./: .gitignore  Dockerfile  LICENSE  Makefile.am  README.md  configure.ac
data/: libxsmm_flops.gp  libxsmm_time.gp  naive_flops.gp  naive_time.gp  openblas_flops.gp  openblas_time.gp
include/: gemm.h
scripts/: measure_performance.sh
src/: Makefile.am  gemm.c  gemm_cblas.c  gemm_libxsmm.c  main.c
tests/: Makefile.am  gemm_test.cpp  test.cpp
